# retrieval-evaluation-api

./: .gitignore  Advanced_Retrieval_with_LangChain_Assignment.ipynb  README.md  config.example.py  dataset_persistence.py  evaluate_retrievers.py  pyproject.toml  run_ui.py  testset_persistence.py
api/: __init__.py  evaluation_runner.py  main.py
data/: retriever_evaluation_results.csv
dataset_cache/: cache_metadata.json
frontend/: index.html
frontend/assets/: app.js  style.css
testset_cache/: testset_metadata.json
